# quadcopter-flightcontroller

./: .clang-format  .clangd  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  arm-none-eabi.build  compile_commands.json  dockerfile  link_script.ld  meson.build  meson_options.txt  ryansullivan-quadcopter-flightcontroller.srctrlprj  stm32code.ld  todo  toolchain.cmake
.devcontainer/: devcontainer.json  dockerfile
Release/: makefile  ryansullivan-quadcopter-firmware.elf  ryansullivan-quadcopter-firmware.hex  ryansullivan-quadcopter-firmware.map  sources.mk
Release/src/: initialize-hardware.d  led.d  main.d  stm32f3xx_hal_msp.d  subdir.mk  timer.d
Release/system/src/cmsis/: subdir.mk  system_stm32f3xx.d  vectors_stm32f303xc.d
Release/system/src/cortexm/: exception-handlers.d  initialize-hardware.d  reset-hardware.d  subdir.mk
Release/system/src/diag/: subdir.mk
Release/system/src/newlib/: subdir.mk
Release/system/src/stm32f3-hal/: stm32f3xx_hal.d  stm32f3xx_hal_cortex.d  stm32f3xx_hal_flash.d  stm32f3xx_hal_flash_ex.d  stm32f3xx_hal_gpio.d  stm32f3xx_hal_iwdg.d  stm32f3xx_hal_pwr.d  stm32f3xx_hal_rcc.d  subdir.mk
STlib/: config
include/: led.h
ldscripts/: sections.ld
lib/: CMakeLists.txt
lib/include/stm32f3-hal/: stm32f3xx_ll_rcc.h  stm32f3xx_ll_wwdg.h
src/: accelerometer.h  application.ld  clocks.cpp  clocks.hpp  clocks_config.hpp  commonio.c  commonio.h  comms.c  comms.h  debug.c  debug.cpp  debug.h  debug.hpp  esc.hpp  i2c.c  i2c.cpp  i2c.h  i2c.hpp  i3g4250d.h  initialize-hardware.c  io.c  io.cpp  io.h  io.hpp  linker.ld  lsm303agr.h  lsm303agr.hpp  main.c  main.cpp  main.h  main.hpp  meson.build  motor.cpp  motor.hpp  port.c  port.cpp  port.h  port.hpp  pwm.cpp  pwm.hpp  (+22 more)
src/drivers/: meson.build
src/drivers/gpio/: gpio.cpp  gpio.hpp  gpio_simulator.cpp  gpio_simulator.hpp  gpio_stm32f303.cpp  gpio_stm32f303.hpp  meson.build
src/drivers/i2c/: i2c.cpp  i2c.hpp  i2c_mock.cpp  i2c_mock.hpp  i2c_stm32f303.cpp  i2c_stm32f303.hpp  meson.build
src/drivers/spi/: meson.build  spi.hpp  spi_mock.cpp  spi_mock.hpp  spi_stm32f303.cpp  spi_stm32f303.hpp
src/drivers/usart/: meson.build  usart.cpp  usart.hpp  usart_mock.cpp  usart_mock.hpp  usart_simulator.cpp  usart_simulator.hpp  usart_stm32f303.cpp  usart_stm32f303.hpp
src/utils/: meson.build  ringbuf.cpp  ringbuf.hpp
subprojects/: cpputest.wrap  result.wrap  stm32f3_hal_driver.wrap
subprojects/packagefiles/stm32f3_hal_driver/: meson.build
subprojects/packagefiles/stm32f3_hal_driver/Drivers/STM32F3xx_HAL_Driver/Inc/: stm32f3xx_hal_conf.h
system/include/cmsis/: stm32f3xx.h
system/src/stm32f3-hal/: stm32f3xx_hal_timebase_rtc_alarm_template.c  stm32f3xx_hal_timebase_rtc_wakeup_template.c  stm32f3xx_hal_wwdg.c
test/: main.cpp  main.hpp  main_native.cpp  meson.build  startup.cpp  syscalls.cpp  test_debug.cpp  test_ringbuf.cpp  unity_config.h
tools/: cmake_configure.bat  cmake_configure.sh  flash.bat  flash.bat - Shortcut.lnk  flash.sh  stm32f3x.cfg
