# Source files
driver_spi_mock_src = files('./spi_mock.cpp')
driver_spi_stm32f303_src = files('./spi_stm32f303.cpp')

# Dependancies
driver_spi_mock_dep = declare_dependency(
    include_directories: '.',
    sources: driver_spi_mock_src,
)

driver_spi_stm32f303_dep = declare_dependency(
    include_directories: '.',
    sources: driver_spi_stm32f303_src,
)
